<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_menu"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/browse_menu"
        android:enabled="true"
        android:icon="@drawable/ic_headset_black_24dp"
        android:title="@string/browse_menu"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/search_menu"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_menu"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/radio_menu"
        android:enabled="true"
        android:icon="@drawable/ic_radio_black_24dp"
        android:title="@string/radio_menu"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/library_menu"
        android:enabled="true"
        android:icon="@drawable/ic_library_music_black_24dp"
        android:title="@string/library_menu"
        app:showAsAction="ifRoom|withText"/>
</menu>