<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_primary_dark"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@color/color_primary_dark"
            android:gravity="center_vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_title"
                android:textAlignment="textStart"
                android:textColor="@color/White"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtSinger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitle"
                android:text="@string/singer"
                android:textColor="@color/Gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtBuffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitle"
                android:layout_toEndOf="@id/txtSinger"
                android:text=" • "
                android:textColor="@color/Gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitle"
                android:layout_toEndOf="@id/txtBuffer"
                android:text="@string/album"
                android:textColor="@color/Gray"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/menu_icon"
                android:tint="@color/Gray" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
